<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/id_card"
    android:clickable="true"
    android:layout_gravity="center"
    android:foreground="?android:attr/selectableItemBackground"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"

    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    android:padding="20dp"
    cardview:cardCornerRadius="4dp"
    android:focusable="true">

    <androidx.cardview.widget.CardView
        android:id="@+id/id_cdv"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        cardview:cardCornerRadius="4dp"
        android:focusable="true">

        <LinearLayout
            android:background="#F5F5F5"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textStyle="bold"
                android:id="@+id/id_model"
                android:textColor="#2d2d2d"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/modelo"/>



            <LinearLayout
                android:background="#fff"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_gravity="center"
                    android:src="@drawable/ic_fraxx"
                    android:id="@+id/id_img"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"

                    android:background="#fff"/>


                <TextView
                    android:layout_margin="10dp"
                    android:padding="2dp"
                    android:id="@+id/id_serial"
                    android:textColor="#2d2d2d"
                    android:textSize="13sp"
                    android:gravity="start"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/serial"/>
                <TextView
                    android:layout_margin="10dp"
                    android:padding="2dp"
                    android:id="@+id/id_nf"
                    android:textColor="#2d2d2d"
                    android:textSize="13sp"
                    android:gravity="start"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nf"/>
                <TextView
                    android:layout_margin="10dp"
                    android:padding="2dp"
                    android:id="@+id/id_data"
                    android:textColor="#2d2d2d"
                    android:textSize="13sp"
                    android:gravity="start"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/data_de_compra"/>
                <LinearLayout
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/status_gar"
                        android:layout_margin="10dp"
                        android:src="@drawable/status_green"
                        android:layout_width="15dp"
                        android:layout_height="15dp" />
                    <TextView
                        android:layout_margin="2dp"
                        android:padding="2dp"

                        android:id="@+id/id_gar"
                        android:textColor="#2d2d2d"
                        android:textSize="13sp"
                        android:gravity="start"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/garantia"/>
                </LinearLayout>
                <LinearLayout
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/status_man"
                        android:layout_margin="10dp"
                        android:src="@drawable/status_green"
                        android:layout_width="15dp"
                        android:layout_height="15dp" />
                    <TextView
                        android:layout_margin="2dp"
                        android:padding="2dp"
                        android:id="@+id/id_man"
                        android:textColor="#2d2d2d"
                        android:textSize="13sp"
                        android:gravity="start"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/man_preventiva"/>
                </LinearLayout>

                <Button
                    android:visibility="gone"
                    android:background="#ffffff"
                    android:id="@+id/btn_solicita"
                    android:text="@string/solicitar_manuten_o"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>



</androidx.cardview.widget.CardView>