<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    >

    <LinearLayout
        android:background="#fff"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"

        android:orientation="vertical"
        android:padding="10dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:contentDescription=""
            android:src="@drawable/ic_loktal"
            tools:ignore="ContentDescription" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <EditText
            android:id="@+id/id_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="email"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        app:passwordToggleEnabled="true"
        android:layout_below="@+id/ti_username">

        <EditText
            android:id="@+id/id_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="senha"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>






    <!-- Login Button -->

    <Button
        android:id="@+id/id_btn_entrar"

        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:text="@string/btn_login"
        android:textColor="#fff"
        android:textStyle="bold" />

    <Button
        android:id="@+id/id_btn_resetar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:background="@color/colorPrimary"
        android:text="@string/btn_forgot_password"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textColor="#fff" />
    <Button
        android:id="@+id/id_btn_registrar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:background="@color/colorPrimary"
        android:text="@string/btn_link_to_register"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textStyle="bold"
        android:textSize="15sp" />
        <ProgressBar
            android:visibility="gone"
            android:id="@+id/id_progressbar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center|bottom"
            tools:layout_editor_absoluteX="142dp"
            tools:layout_editor_absoluteY="162dp"
            tools:ignore="MissingConstraints" />
    </LinearLayout>

</LinearLayout>









